# w-qa-bot

./: .gitignore  .tool-versions  app.py  chunks.txt  makeVector.py  pyproject.toml  rag-text.txt  rag.py  requirements.txt  vectors.txt
