[tool.poetry]
name = "w-qa-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "w_qa_bot"}]

[tool.poetry.dependencies]
python = "3.11.4"
streamlit = "1.33.0"
pandas = "^2.2.2"
openai = "^1.35.13"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
